--- a/crates/waremax-metrics/Cargo.toml
+++ b/crates/waremax-metrics/Cargo.toml
@@ -10,3 +10,6 @@ rkyv = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 sled = { workspace = true }
+
+[dev-dependencies]
+tempfile = "3.10"
