--- a/crates/waremax-policies/Cargo.toml
+++ b/crates/waremax-policies/Cargo.toml
@@ -2,6 +2,8 @@
 name = "waremax-policies"
 version.workspace = true
 edition.workspace = true
+license.workspace = true
+repository.workspace = true
 description = "Pluggable policies for Waremax simulation"
 
 [dependencies]
