--- a/crates/waremax-sim/Cargo.toml
+++ b/crates/waremax-sim/Cargo.toml
@@ -2,6 +2,8 @@
 name = "waremax-sim"
 version.workspace = true
 edition.workspace = true
+license.workspace = true
+repository.workspace = true
 description = "Simulation orchestration for Waremax"
 
 [dependencies]
