--- a/crates/waremax-analysis/Cargo.toml
+++ b/crates/waremax-analysis/Cargo.toml
@@ -2,6 +2,8 @@
 name = "waremax-analysis"
 version.workspace = true
 edition.workspace = true
+license.workspace = true
+repository.workspace = true
 description = "Root cause analysis and diagnostics for Waremax simulations"
 
 [dependencies]
