--- a/crates/waremax-core/Cargo.toml
+++ b/crates/waremax-core/Cargo.toml
@@ -2,6 +2,8 @@
 name = "waremax-core"
 version.workspace = true
 edition.workspace = true
+license.workspace = true
+repository.workspace = true
 description = "Core types and DES kernel for Waremax simulation"
 
 [dependencies]
