--- a/crates/waremax-map/Cargo.toml
+++ b/crates/waremax-map/Cargo.toml
@@ -2,6 +2,8 @@
 name = "waremax-map"
 version.workspace = true
 edition.workspace = true
+license.workspace = true
+repository.workspace = true
 description = "Graph-based map, routing, and traffic management for Waremax"
 
 [dependencies]
