--- a/crates/waremax-metrics/Cargo.toml
+++ b/crates/waremax-metrics/Cargo.toml
@@ -2,6 +2,8 @@
 name = "waremax-metrics"
 version.workspace = true
 edition.workspace = true
+license.workspace = true
+repository.workspace = true
 description = "Metrics collection and reporting for Waremax"
 
 [dependencies]
