--- a/crates/waremax-storage/Cargo.toml
+++ b/crates/waremax-storage/Cargo.toml
@@ -2,6 +2,8 @@
 name = "waremax-storage"
 version.workspace = true
 edition.workspace = true
+license.workspace = true
+repository.workspace = true
 description = "Storage, racks, bins, and inventory management for Waremax"
 
 [dependencies]
