--- a/crates/waremax-testing/Cargo.toml
+++ b/crates/waremax-testing/Cargo.toml
@@ -2,6 +2,8 @@
 name = "waremax-testing"
 version.workspace = true
 edition.workspace = true
+license.workspace = true
+repository.workspace = true
 description = "Testing and benchmarking framework for Waremax"
 
 [dependencies]
