--- a/crates/waremax-ui/Cargo.toml
+++ b/crates/waremax-ui/Cargo.toml
@@ -2,6 +2,8 @@
 name = "waremax-ui"
 version.workspace = true
 edition.workspace = true
+license.workspace = true
+repository.workspace = true
 description = "Embedded web UI for Waremax simulation visualization"
 
 [dependencies]
